[package]
name = "esp-backtrace"
version = "0.9.0"
edition = "2021"
description = "Bare-metal backtrace support for ESP32"
repository = "https://github.com/esp-rs/esp-backtrace"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
default-target = "riscv32imc-unknown-none-elf"
features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"]

[dependencies]
esp-println = { version = "0.8.0", optional = true, default-features = false }
defmt = { version = "0.3.5"}

[features]
default = [ "colors" ]

# You must enable exactly one of the below features to support the correct chip:
esp32 = ["esp-println?/esp32"]
esp32c2 = ["esp-println?/esp32c2"]
esp32c3 = ["esp-println?/esp32c3"]
esp32c6 = ["esp-println?/esp32c6"]
esp32h2 = ["esp-println?/esp32h2"]
esp32s2 = ["esp-println?/esp32s2"]
esp32s3 = ["esp-println?/esp32s3"]

# You must enable exactly one of the below features to enable the intended
# communication method:
print-jtag-serial = ["esp-println/jtag-serial"]
print-uart = ["esp-println/uart"]

# You may optionally enable one or more of the below features to provide
# additional functionality:
print-defmt = ["esp-println?/defmt-espflash"]
exception-handler = ["esp-println"]
panic-handler = ["esp-println"]
halt-cores = []
colors = []
